[package]
name = "server"
version = "0.1.0"
authors = ["Alistair A. Israel <aisrael@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.1"
graphql-parser = "0.2.3"
http = "0.1"
# Hyper is an asynchronous HTTP library.
hyper = "0.13.0"
juniper = "0.12"
juniper_hyper = "0.3.0"
log = "0.4"
simplelog = "^0.6.0"
# We use the Tokio async runtime (needed by Hyper)
tokio = { version = "0.2", features = ["full"] }
